# tof-sih

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: build.yml
CppSDK/: CMakeLists.txt
cfg/: CMakeLists.txt  config.cpp  config.hpp  pch.hpp
injector/: CMakeLists.txt  _aux.cpp  inject.cpp  inject.hpp  main.cpp  manual.hpp  pch.hpp
src/: CMakeLists.txt  ace.hpp  globals.cpp  globals.hpp  hooks.cpp  hooks.hpp  main.cpp  main.hpp  memory_manager.hpp  pch.hpp  proc.cpp  sig.hpp
src/config/: config.cpp  config.hpp
src/ext/imgui/: CMakeLists.txt
src/ext/kiero/: CMakeLists.txt
src/feats/: ability_failure.cpp  ability_failure.hpp  about.cpp  about.hpp  anti_anti_cheat.cpp  anti_anti_cheat.hpp  chain_logging.cpp  chain_logging.hpp  chest_resizer.cpp  chest_resizer.hpp  display_poi.cpp  display_poi.hpp  early_init.cpp  early_init.hpp  esp.cpp  esp.hpp  fov.cpp  fov.hpp  hotkey.cpp  hotkey.hpp  inf_dodge.cpp  inf_dodge.hpp  inf_jump.cpp  inf_jump.hpp  jump_height.cpp  jump_height.hpp  login.cpp  login.hpp  move_speed.cpp  move_speed.hpp  no_clip.cpp  no_clip.hpp  no_transparency.cpp  no_transparency.hpp  ping.cpp  ping.hpp  quest.cpp  quest.hpp  rapid_attack.cpp  rapid_attack.hpp  (+10 more)
src/feats/esp/: box.cpp  box.hpp  chowchow.cpp  chowchow.hpp  dandelion.cpp  dandelion.hpp  fish_baiter.cpp  fish_baiter.hpp  kerosenia.cpp  kerosenia.hpp  nucleus.cpp  nucleus.hpp  old_man.cpp  old_man.hpp  particle_fish.cpp  particle_fish.hpp  perspective.cpp  perspective.hpp  shroom.cpp  shroom.hpp  sponge.cpp  sponge.hpp  watcher.cpp  watcher.hpp
src/feats/resizer/: chest.cpp  chest.hpp  pelvis.cpp  pelvis.hpp
src/logger/: logger.cpp  logger.hpp
src/logger/chain/: chain.cpp  chain.hpp
src/menu/: dx11_impl.cpp  dx11_impl.hpp  dx12_impl.cpp  dx12_impl.hpp  menu.cpp  menu.hpp  roboto.hpp
src/menu/layout/: layout.cpp  layout.hpp
tools/: CMakeLists.txt  aad.cpp  log.cpp
