cmake_minimum_required(VERSION 3.20)

project(TOFInternal VERSION 0.0.1)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
if (CMAKE_GENERATOR MATCHES "Visual Studio")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /bigobj /utf-8")
endif()
add_definitions(-DUNICODE -D_UNICODE)

option(BUILD_STEAM_VERSION "Create a build for the Steam version" OFF)
if (BUILD_STEAM_VERSION)
    add_definitions(-DIS_STEAM_VERSION)
endif()

add_subdirectory(src)
add_subdirectory(CppSDK)
add_subdirectory(cfg)
add_subdirectory(injector)
add_subdirectory(tools)
add_subdirectory(kiero/minhook)