add_library(TOFInternal SHARED
    main.cpp
    globals.cpp
    hooks.cpp
    logger/logger.cpp
    logger/chain/chain.cpp
    menu/menu.cpp
    menu/layout/layout.cpp
    menu/dx12_impl.cpp
    menu/dx11_impl.cpp
    feats/anti_anti_cheat.cpp
    feats/move_speed.cpp
    feats/fov.cpp
    feats/inf_jump.cpp
    feats/login.cpp
    feats/teleport_nucleus.cpp
    feats/quest.cpp
    feats/teleport_anywhere.cpp
    feats/chain_logging.cpp
    feats/rapid_attack.cpp
    feats/no_clip.cpp
    feats/uid_edit.cpp
    feats/about.cpp
    feats/hotkey.cpp
    feats/teleport_box.cpp
    feats/jump_height.cpp
    feats/inf_dodge.cpp
    feats/ability_failure.cpp
    feats/no_transparency.cpp
    feats/resizer.cpp
    feats/resizer/chest.cpp
    feats/resizer/pelvis.cpp
    feats/esp.cpp
    feats/esp/box.cpp
    feats/esp/nucleus.cpp
    feats/esp/kerosenia.cpp
    feats/esp/perspective.cpp
    feats/esp/watcher.cpp
    feats/esp/shroom.cpp
    feats/esp/dandelion.cpp
    feats/esp/chowchow.cpp
    feats/esp/sponge.cpp
    feats/esp/particle_fish.cpp
    feats/esp/fish_baiter.cpp
    feats/esp/old_man.cpp
)
target_precompile_headers(TOFInternal PRIVATE pch.hpp)
add_subdirectory(ext/imgui)
add_subdirectory(ext/kiero)
target_link_libraries(TOFInternal CppSDK ImGui Kiero Config DXGI)
target_include_directories(TOFInternal PRIVATE ../imgui ../kiero ../cfg)